fixing the menu - changed homepage text - fixed margin on mobile

--- a/public/global.css
+++ b/public/global.css
@@ -25,7 +25,6 @@ label {
 main {
 	text-align: center;
 	padding: 1em;
-	max-width: 240px;
 	margin: 0 auto;
 }
 
